[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/ui/menu/TabStatus.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/menu/TabSettings.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/buttons/blank.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/buttons/blank_pressed.png" type="Texture" id=11]
[ext_resource path="res://scenes/ui/menu/MenuPanel.gd" type="Script" id=13]
[ext_resource path="res://scenes/ui/menu/TabItems.tscn" type="PackedScene" id=14]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[node name="MenuPanel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 8 )
script = ExtResource( 13 )

[node name="Tween" type="Tween" parent="."]

[node name="Close" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="HBox" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -274.5
margin_top = -197.5
margin_right = 274.5
margin_bottom = 197.5
mouse_filter = 2

[node name="TabBg" type="NinePatchRect" parent="HBox"]
margin_right = 481.0
margin_bottom = 395.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 11 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Tabs" type="TabContainer" parent="HBox/TabBg"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 9 )
tabs_visible = false

[node name="TabStatus" parent="HBox/TabBg/Tabs" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabItems" parent="HBox/TabBg/Tabs" instance=ExtResource( 14 )]
visible = false
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabSettings" parent="HBox/TabBg/Tabs" instance=ExtResource( 3 )]
visible = false

[node name="TabButtons" type="VBoxContainer" parent="HBox"]
margin_left = 485.0
margin_right = 549.0
margin_bottom = 395.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="TextureButton" parent="HBox/TabButtons"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
toggle_mode = true
pressed = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="Items" type="TextureButton" parent="HBox/TabButtons"]
margin_top = 64.0
margin_right = 64.0
margin_bottom = 128.0
rect_min_size = Vector2( 64, 64 )
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="Settings" type="TextureButton" parent="HBox/TabButtons"]
margin_top = 128.0
margin_right = 64.0
margin_bottom = 192.0
rect_min_size = Vector2( 64, 64 )
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 11 )
expand = true
stretch_mode = 5

[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="HBox/TabButtons/Status" to="." method="_on_Status_pressed"]
[connection signal="pressed" from="HBox/TabButtons/Items" to="." method="_on_Items_pressed"]
[connection signal="pressed" from="HBox/TabButtons/Settings" to="." method="_on_Settings_pressed"]
